<resources>
    <string name="app_name">Brass Scale Practice</string>
    <string name="valve_1">1st Valve</string>
    <string name="valve_2">2nd Valve</string>
    <string name="valve_3">3rd Valve</string>
    <string name="start_state">Start</string>
    <string name="stop_state">Stop</string>
    <string name="note_display_default">Note Display</string>
    <string-array name="note_names">
        <item>C</item>
        <item>G</item>
        <item>D</item>
        <item>A</item>
        <item>E</item>
        <item>B</item>
        <item>G&#9837;</item>
        <item>D&#9837;</item>
        <item>A&#9837;</item>
        <item>E&#9837;</item>
        <item>B&#9837;</item>
        <item>F</item>
    </string-array>
    <string-array name="scale_types">
        <item>Major</item>
        <item>Dorian</item>
        <item>Mixolydian</item>
        <item>Bebop</item>
    </string-array>
    <string name="score">Score %1$d</string>
    <string name="a">A</string>
    <string name="bb">A#/B&#9837;</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="db">C#/D&#9837;</string>
    <string name="d">D</string>
    <string name="eb">D#/E&#9837;</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="gb">F#/G&#9837;</string>
    <string name="g">G</string>
    <string name="ab">G#/A&#9837;</string>
</resources>
